--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="post-portal"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
