Added post preview feature

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <body>
     <div id="root"></div>
     <div id="post-portal"></div>
+    <div id="post-preview"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
