Added new message related components

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div id="root"></div>
     <div id="post-portal"></div>
     <div id="post-preview"></div>
+    <div id="new-message-portal"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
